<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hibachi_base</name>
  <version>1.0.0</version>
  <description>Hardware controller for Hibachi</description>
  <license>Apache-2.0</license>
  
  <maintainer email="acapovilla@sinc.unl.edu.ar">Agustin Capovilla</maintainer>
  <maintainer email="gsanchez@sinc.unl.edu.ar">Guido Sanchez</maintainer>
  
  <author email="acapovilla@sinc.unl.edu.ar">Agustin Capovilla</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <!-- <depend>controller_interface</depend> -->
  <!-- <depend>rclcpp_lifecycle</depend> -->
  <depend>rclcpp</depend>
  <!-- No realtime implemented -->
  <!-- <depend>realtime_tools</depend> -->
  
  <build_depend>pluginlib</build_depend>

  <!-- Only for executing test -->
  <!-- <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>hardware_interface</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>