<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>hibachi_control</name>
    <version>0.1.0</version>
    <description>The hibachi_control package</description>

    <maintainer email="gsanchez@sinc.unl.edu.ar">Guido Sanchez</maintainer>
    <maintainer email="acapovilla@sinc.unl.edu.ar">Agustin Capovilla</maintainer>
    <license>TODO: License declaration</license>

    <url type="bugtracker">https://github.com/gmsanchez/hibachi/issues</url>
    <url type="repository">https://github.com/gmsanchez/hibachi</url>

    <author email="acapovilla@sinc.unl.edu.ar">Agustin Capovilla</author>
    <author email="gsanchez@sinc.unl.edu.ar">Guido Sanchez</author>
    <author email="mmurillo@sinc.unl.edu.ar">Marina Murillo</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslaunch</build_depend>

    <exec_depend>controller_manager</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>diff_drive_controller</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>

    <export></export>
</package>