<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>hibachi_description</name>
    <version>0.1.0</version>
    <description>The Hibachi URDF description</description>

    <maintainer email="gsanchez@sinc.unl.edu.ar">Guido Sanchez</maintainer>
    <maintainer email="acapovilla@sinc.unl.edu.ar">Agustin Capovilla</maintainer>
    <license>TODO: License declaration</license>

    <url type="bugtracker">https://github.com/gmsanchez/hibachi/issues</url>
    <url type="repository">https://github.com/gmsanchez/hibachi</url>

    <author email="gsanchez@sinc.unl.edu.ar">Guido Sanchez</author>
    <author email="acapovilla@sinc.unl.edu.ar">Agustin Capovilla</author>
    <author email="mmurillo@sinc.unl.edu.ar">Marina Murillo</author>
    <author email="ngaggion@gmail.com">Nicolas Gaggion</author>
    <author email="estebanwarinet@gmail.com">Esteban Warinet</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roslaunch</build_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>xacro</exec_depend>

    <export></export>
</package>