<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>hibachi_imu</name>
    <version>0.1.0</version>
    <description>The hibachi_imu package</description>

    <maintainer email="gsanchez@sinc.unl.edu.ar">Guido Sanchez</maintainer>
    <maintainer email="acapovilla@sinc.unl.edu.ar">Agustin Capovilla</maintainer>
    <license>TODO: License declaration</license>

    <url type="bugtracker">https://github.com/gmsanchez/hibachi/issues</url>
    <url type="repository">https://github.com/gmsanchez/hibachi</url>

    <author email="acapovilla@sinc.unl.edu.ar">Agustin Capovilla</author>
    <author email="gsanchez@sinc.unl.edu.ar">Guido Sanchez</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslint</build_depend>

    <depend>roscpp</depend>
    <depend>roslaunch</depend>
    <depend>sensor_msgs</depend>

    <exec_depend>imu_filter_madgwick</exec_depend>
    
    <export></export>
</package>